ressources/css/style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');

/* CSS DESKTOP */
/* Everything */
* {
    box-sizing: border-box;

}

html {
    font-family: 'Montserrat';
}

body {

    max-width: 1240px;
    margin: auto;
    display: flex;
    flex-direction: column;
    box-shadow: 0px 2px 250px 0px gray;
    min-height: 100vh;
}

/* Bloc principal */
main {
    margin: 0px 20px;
    flex-grow: 1;
    display: flex;
}

/* Header */
body > header {
    background-image: linear-gradient(#f6c2a8, #e26835);
    padding-top: 50px;
}

body > header h1 {
    margin: 40px;
    color: white;
    text-align: center;
}

/* Menu de navigation */
.hamburger {
    display: none;
}

nav ul {
    list-style: none;
    margin: 0;
    padding-left: 25    px;

}

nav li {
    display: inline-block;
    height: 100%;
    padding: 10px;
}

nav a:hover {
    color: orange;
}

nav a {
    text-decoration: none;
    color: white;
    font-weight: 700;
}

nav {
    background: #2f2f2f;
}

nav .active {

    background: white;

}

nav .active a {
    color: orange;
}


/* Footer */

footer {
    background: #2f2f2f;
    padding: 15px;
    text-align: center;
    width: 100%;
}

footer img {
    height: 50px;
    margin-left: auto;
}

/* Eléments solo */
a {
    color: #E26633;
    text-decoration: none;
}

h2 {
    border-bottom: 1px dotted gray;
    margin-bottom: 10px;
}

#articles {
    flex: 3;
}

#articles article > header {
    position: relative;
    margin-bottom: 50px;
}

#articles article > header > p {
    position: absolute;
    right: 0px;
    margin: 0px;
    padding-top: -10px;
}

aside {
    flex: 1;
}

aside > div {
    box-shadow: 0px 2px 5px 2px grey;
    margin-left: 20px;
}

aside > div > h3 {
    background-color: #E26633;
    color: white;
    padding: 5px;
}

aside > div > ul {
    list-style: none;
    padding: 0px 5px 5px 5px;
}


/* Pour le mobile */
@media only screen and (max-width: 768px) {

    main {
        display: block;
    }

    .hamburger {
        display: block;
        text-align: center;
        color: white;
        filter: brightness(0) invert(1);
    }

    nav ul {
        padding: 0px;
        text-align: center;
    }

    nav li {
        height: 100%;
        padding: 10px;
        display: block;
    }

    .mockup figure {
        width: 100%;
    }
}

.mockup {
    margin-bottom: 30px;
}

.mockup figure {
    width: 45%;
    margin: 2%;
    display: inline-block;
}

#articles div p {
    text-align: right;
}

.sitemap li h4 {
    margin: 0
}

.sitemap ul li {
    margin: 5px;
}

.sitemap li {
    list-style-type: none;
    counter-increment: repas; /* on incrémente le compteur à chaque nouveau li */
    margin-bottom: 10px;
}

.sitemap li:before {
    content: ' - ';
    padding: 0px 10px;
    margin-right: 8px;
    vertical-align: top;
    background: #fa5630;
    -moz-border-radius: 60px;
    border-radius: 60px;
    font-weight: bold;
    font-size: 0.8em;
    color: white;
}

#articles .emphase {
    text-align: right;
}

